Archive2/8d/cd6fdcf6a93891/output
main.cpp: In function 'int main()':
main.cpp:11:9: error: too few arguments to function 'int fclose(FILE*)'
  fclose();
         ^
In file included from /usr/local/include/c++/4.9.2/cstdio:42:0,
                 from /usr/local/include/c++/4.9.2/ext/string_conversions.h:43,
                 from /usr/local/include/c++/4.9.2/bits/basic_string.h:2850,
                 from /usr/local/include/c++/4.9.2/string:52,
                 from /usr/local/include/c++/4.9.2/bits/locale_classes.h:40,
                 from /usr/local/include/c++/4.9.2/bits/ios_base.h:41,
                 from /usr/local/include/c++/4.9.2/ios:42,
                 from /usr/local/include/c++/4.9.2/ostream:38,
                 from /usr/local/include/c++/4.9.2/iostream:39,
                 from main.cpp:1:
/usr/include/stdio.h:238:12: note: declared here
 extern int fclose (FILE *__stream);
            ^
